--- a/template/checklist/index.html
+++ b/template/checklist/index.html
@@ -609,15 +609,15 @@
                                 >
                                     <ul class="container">
                                         <li>
-                                            <input class="styled-checkbox" id="checkbox-0" type="checkbox" value="passport">
+                                            <input class="styled-checkbox" id="checkbox-0" type="checkbox" value="0">
                                             <label for="checkbox-0">Паспорт</label>
                                         </li>
                                         <li>
-                                            <input class="styled-checkbox" id="checkbox-1" type="checkbox" value="snils">
+                                            <input class="styled-checkbox" id="checkbox-1" type="checkbox" value="1">
                                             <label for="checkbox-1">СНИЛС</label>
                                         </li>
                                         <li>
-                                            <input class="styled-checkbox" id="checkbox-2" type="checkbox" value="inn">
+                                            <input class="styled-checkbox" id="checkbox-2" type="checkbox" value="2">
                                             <label for="checkbox-2">ИНН</label>
                                         </li>
                                     </ul>
@@ -628,15 +628,15 @@
                                 >
                                     <ul class="container">
                                         <li>
-                                            <input class="styled-checkbox" id="checkbox-3" type="checkbox" value="workBook">
+                                            <input class="styled-checkbox" id="checkbox-3" type="checkbox" value="3">
                                             <label for="checkbox-3">Трудовая книжка*</label>
                                         </li>
                                         <li>
-                                            <input class="styled-checkbox" id="checkbox-4" type="checkbox" value="requisite">
+                                            <input class="styled-checkbox" id="checkbox-4" type="checkbox" value="4">
                                             <label for="checkbox-4">Реквизиты банковского счета для перечисления заработной платы</label>
                                         </li>
                                         <li>
-                                            <input class="styled-checkbox" id="checkbox-5" type="checkbox" value="warCard">
+                                            <input class="styled-checkbox" id="checkbox-5" type="checkbox" value="5">
                                             <label for="checkbox-5">Военный билет + фото 3x4 (да, это обязательные требования для оформления военнообязанных)</label>
                                         </li>
                                     </ul>
@@ -663,11 +663,11 @@
                                     >
                                         <ul class="container">
                                             <li>
-                                                <input class="styled-checkbox" id="checkbox-6" type="checkbox" value="diplom">
+                                                <input class="styled-checkbox" id="checkbox-6" type="checkbox" value="6">
                                                 <label for="checkbox-6">Дипломы и свидетельства об окончании курсов повышения квалификации</label>
                                             </li>
                                             <li>
-                                                <input class="styled-checkbox" id="checkbox-7" type="checkbox" value="born">
+                                                <input class="styled-checkbox" id="checkbox-7" type="checkbox" value="7">
                                                 <label for="checkbox-7">Свидетельство о рождении ребенка (если нужен налоговый вычет и другие корпоративные плюшки)</label>
                                             </li>
                                         </ul>
