--- a/template/checklist/index.html
+++ b/template/checklist/index.html
@@ -880,9 +880,15 @@
                                 <p class="bold">
                                     Москва, ул. Тестовская, д. 10, подъезд 2, этаж 12
                                 </p>
-                                    <a class="link" href="https://yandex.ru/maps/geo/testovskaya_ulitsa_10_podyezd_2/1715652540/?ll=37.533077%2C55.751143&utm_source=share&z=19">Яндекс Карты</a>
-                                <p>
-                                    Накануне Вашего выхода мы заказываем постоянный пропуск, чтобы его получить Вам надо обратиться в Бюро пропусков Бизнес-центра <span>(2 подъезд, 2 этаж)</span>, чтобы не потеряться – обратитесь на ресепшене первого этажа за информацией.
+                                <a class="link display" href="https://yandex.ru/maps/geo/testovskaya_ulitsa_10_podyezd_2/1715652540/?ll=37.533077%2C55.751143&utm_source=share&z=19">Яндекс Карты</a>
+                                <p class="display">
+                                    Накануне Вашего выхода мы заказываем постоянный пропуск, чтобы его получить Вам надо обратиться в <span>Бюро пропусков</span> Бизнес-центра <span>(2 подъезд, 2 этаж)</span>, чтобы не потеряться – обратитесь на ресепшене первого этажа за информацией.
+                                    Когда поднимитесь на 12 этаж, позвоните по контактному номеру телефона сопровождающему вас HR-менеджеру, Вас встретят 😊
+                                </p>
+                                <p class="medium">
+                                    Накануне Вашего выхода мы заказываем постоянный пропуск, чтобы его получить Вам надо обратиться в <span>Бюро пропусков</span> Бизнес-центра (2 подъезд, 2 этаж), чтобы не потеряться <br>– обратитесь на ресепшене первого этажа за информацией.
+                                </p>
+                                <p class="medium">
                                     Когда поднимитесь на 12 этаж, позвоните по контактному номеру телефона сопровождающему вас HR-менеджеру, Вас встретят 😊
                                 </p>
                             </div>
@@ -1071,11 +1077,20 @@
                             </svg>
                         </div>
                     </div>
+                    <div class="description tablet">
+                        <a class="link" href="https://yandex.ru/maps/geo/testovskaya_ulitsa_10_podyezd_2/1715652540/?ll=37.533077%2C55.751143&utm_source=share&z=19">Яндекс Карты</a>
+                        <p>
+                            Накануне Вашего выхода мы заказываем постоянный пропуск, чтобы его получить Вам надо обратиться в Бюро пропусков Бизнес-центра <span>(2 подъезд, 2 этаж)</span>, чтобы не потеряться – обратитесь на ресепшене первого этажа за информацией.
+                        </p>
+                        <p>
+                            Когда поднимитесь на 12 этаж, позвоните по контактному номеру телефона сопровождающему вас HR-менеджеру, Вас встретят 😊
+                        </p>
+                    </div>
                 </section>
                 <section class="child--item_5">
                     <div class="container">
-                        <h2 class="title">ПЕРВЫЙ РАБОЧИЙ ДЕНЬ</h2>
-                        <div class="about">
+                        <h2 class="title display">ПЕРВЫЙ РАБОЧИЙ ДЕНЬ</h2>
+                        <div class="about display">
                             <p>
                                 В этот день Вы получите все необходимые доступы (пропуск в офис компании, пароли к почте и учетной записи) и технику для работы.
                             </p>
@@ -1170,7 +1185,17 @@
                                     <path d="M157.084 113.303L140.209 129.304L123.769 112.759C122.571 113.412 121.265 113.956 120.067 114.5C116.474 116.024 110.595 117.439 106.675 119.181C115.168 127.562 126.708 132.678 139.555 132.678C152.294 132.678 163.834 127.562 172.326 119.29C171.347 118.746 169.822 118.201 167.536 117.548C164.27 116.677 160.459 115.045 157.084 113.303Z" fill="#00A0A8" stroke="black" stroke-miterlimit="10"/>
                                 </svg>
                             </div>
-                            <div class="data">
+<!--                            <h2 class="title medium">ПЕРВЫЙ РАБОЧИЙ ДЕНЬ</h2>-->
+                            <div class="about tablet">
+                                <h2 class="title tablet">ПЕРВЫЙ РАБОЧИЙ ДЕНЬ</h2>
+                                <p>
+                                    В этот день Вы получите все необходимые доступы (пропуск в офис компании, пароли к почте и учетной записи) и технику для работы.
+                                </p>
+                                <p>
+                                    Вас ожидают: экскурсии по офису, знакомство с коллегами, вводная рабочая встреча с руководителем, где вы обсудите задачи на испытательный срок.
+                                </p>
+                            </div>
+                            <div class="data display">
                                 <p>
                                     У нас принято знакомить новых сотрудников с коллективом, для этого HR отдел делает общую рассылку по компании.
                                 </p>
@@ -1182,7 +1207,23 @@
                                 </p>
                             </div>
                         </div>
-                        <div class="end">
+
+                        <div class="data tablet">
+                            <p>
+                                У нас принято знакомить новых сотрудников с коллективом, для этого HR отдел делает общую рассылку по компании.
+                            </p>
+                            <p>
+                                Поэтому накануне выхода к нам, не забудьте прислать в HR отдел свое фото в электронном виде, где Вы улыбаетесь и максимально похожи на себя в обычной жизни (можно прислать несколько, можно селфи).
+                            </p>
+                            <p>
+                                Еще нужно будет написать небольшой абзац о себе (хобби, интересы и все, что считаешь важным).
+                            </p>
+                            <div class="end">
+                                И главное... Не забудьТЕ хорошее настроение! :)
+                            </div>
+                        </div>
+
+                        <div class="end display">
                             И главное... Не забудьТЕ хорошее настроение! :)
                         </div>
                     </div>
