--- a/template/checklist/index.html
+++ b/template/checklist/index.html
@@ -881,6 +881,12 @@
                                     Москва, ул. Тестовская, д. 10, подъезд 2, этаж 12
                                 </p>
                                 <a class="link display" href="https://yandex.ru/maps/geo/testovskaya_ulitsa_10_podyezd_2/1715652540/?ll=37.533077%2C55.751143&utm_source=share&z=19">Яндекс Карты</a>
+                                <p class="small">
+                                    Накануне Вашего выхода мы заказываем постоянный пропуск, <br>чтобы его получить Вам надо обратиться в <span>Бюро пропусков</span> Бизнес-центра <br> <span>(2 подъезд, 2 этаж)</span>, чтобы не потеряться – обратитесь на ресепшене первого этажа за информацией.
+                                </p>
+                                <p class="small">
+                                    Когда поднимитесь на 12 этаж, позвоните по контактному номеру телефона сопровождающему вас HR-менеджеру, Вас встретят 😊
+                                </p>
                                 <p class="display">
                                     Накануне Вашего выхода мы заказываем постоянный пропуск, чтобы его получить Вам надо обратиться в <span>Бюро пропусков</span> Бизнес-центра <span>(2 подъезд, 2 этаж)</span>, чтобы не потеряться – обратитесь на ресепшене первого этажа за информацией.
                                     Когда поднимитесь на 12 этаж, позвоните по контактному номеру телефона сопровождающему вас HR-менеджеру, Вас встретят 😊
@@ -1185,7 +1191,6 @@
                                     <path d="M157.084 113.303L140.209 129.304L123.769 112.759C122.571 113.412 121.265 113.956 120.067 114.5C116.474 116.024 110.595 117.439 106.675 119.181C115.168 127.562 126.708 132.678 139.555 132.678C152.294 132.678 163.834 127.562 172.326 119.29C171.347 118.746 169.822 118.201 167.536 117.548C164.27 116.677 160.459 115.045 157.084 113.303Z" fill="#00A0A8" stroke="black" stroke-miterlimit="10"/>
                                 </svg>
                             </div>
-<!--                            <h2 class="title medium">ПЕРВЫЙ РАБОЧИЙ ДЕНЬ</h2>-->
                             <div class="about tablet">
                                 <h2 class="title tablet">ПЕРВЫЙ РАБОЧИЙ ДЕНЬ</h2>
                                 <p>
