--- a/template/rules/index.html
+++ b/template/rules/index.html
@@ -485,11 +485,11 @@
             <div class="container__schema">
                 <div class="input">
                     <label for="domain">Домен</label>
-                    <input id="domain" readonly placeholder="showcase.booking" readonly/>
+                    <input id="domain" readonly placeholder="" readonly/>
                 </div>
                 <div class="input">
                     <label for="name">Название схемы</label>
-                    <input id="name" readonly placeholder="name" readonly/>
+                    <input id="name" readonly placeholder="" readonly/>
                 </div>
             </div>
         </fer-form>
@@ -507,7 +507,7 @@
         <fer-region class="fer-region_0" slot="fer-region_0">
             <div class="input" readonly>
                 <label for="version">Версия</label>
-                <input id="version" placeholder="Введите версию" readonly/>
+                <input id="version" placeholder="" readonly/>
             </div>
             <div class="input --flex-grow_1 --outline">
                 <label for="title">Заголовок</label>
@@ -667,7 +667,7 @@
                     <label class="label_for_description" for="rules_label">Описание</label>
                     <textarea
                       id="rules_label"
-                      placeholder="Описание"
+                      placeholder=""
                       class="fer-codemirror-description--margin-bottom_12px"
                     ></textarea>
                 </div>
